# isometric-cubes

./: .gitignore  Makefile  README.md  index.html  package-lock.json  webpack.config.js
artcx/: Cargo.toml
artcx/public/: art.pub  blog.css
artcx/public/blog/: 10-01-21-happiness.html  12-08-22-city-of-bots.html  index.html
artcx/src/: main.rs
cubes/: Cargo.toml  index.html  index.js  package-lock.json  package.json  webpack.common.js  webpack.dev.js  webpack.prod.js
cubes/src/: cube.rs  cube_grid.rs  grid.rs  lib.rs  link.rs
public/: styles.css
scripts/: build.sh  deploy.sh
src/: cube.rs  cube_grid.rs  grid.rs  lib.rs  link.rs  movement.rs
