[package]
name = "artcx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
geo = "0.26.0"
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.61"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'Location',
  'MouseEvent',
  'Node',
  'Window',
  'Performance',
  'PerformanceTiming',
  'TextMetrics',
  'Touch',
  'TouchEvent',
  'TouchList'
]
